tests/paren1.err
30 DEF A(X)=X+1
       ^
Error: name already used for array: name: A
