tests/paren1.bas
10 REM ASSIGNED AS ARRAY, DEFINED AS FUNCTION
20 A(4)=9
30 DEF A(X)=X+1
